crates/monochange_integration_tests/tests/snapshots/publish_duplicate_version__dry_run_publish_packages_with_fail_on_duplicate_input_plans_new_versions.snap
---
source: crates/monochange_integration_tests/tests/publish_duplicate_version.rs
expression: outcome
---
{
  "command": "npm publish --access public --dry-run",
  "ecosystem": "npm",
  "message": "would publish strict 1.0.0 to npm",
  "package": "strict",
  "placeholder": false,
  "registry": "npm",
  "status": "planned",
  "stderr": "[npm dry-run stderr]",
  "stdout": "[npm dry-run stdout]",
  "trusted_publishing": {
    "environment": null,
    "message": "configure trusted publishing manually for `strict` before the next built-in release publish; open https://www.npmjs.com/package/strict/access and finish the GitHub context setup first: config error: trusted publishing could not determine the GitHub repository; set `publish.trusted_publishing.repository`. No supported CI provider identity was detected for npm trusted publishing; supported providers: GitHub Actions, GitLab CI/CD.",
    "repository": null,
    "setup_url": "https://www.npmjs.com/package/strict/access",
    "status": "manual_action_required",
    "workflow": null
  },
  "version": "1.0.0"
}
