crates/monochange_integration_tests/tests/snapshots/publish_duplicate_version__publish_packages_fails_when_fail_on_duplicate_is_enabled.snap
---
source: crates/monochange_integration_tests/tests/publish_duplicate_version.rs
expression: "String::from_utf8_lossy(&output.stderr).trim()"
---
error[publish.failed]: package publishing did not complete: 1 total, 0 published, 1 failed, 0 blocked, 0 already existed, 0 not attempted, 0 planned; failed package strict 1.0.0: strict 1.0.0 already exists on npm and `publish.fail_on_duplicate` rejects duplicate version publications
  command: monochange step publish-packages
  help:    Fix the failed packages listed above, then rerun the publish command; by default, versions that already exist on the registry are skipped.
