crates/monochange_integration_tests/tests/snapshots/publish_duplicate_version__publish_packages_skips_already_published_version_by_default.snap
---
source: crates/monochange_integration_tests/tests/publish_duplicate_version.rs
expression: outcome
---
{
  "ecosystem": "npm",
  "message": "tolerant 1.0.0 already exists on npm",
  "package": "tolerant",
  "placeholder": false,
  "registry": "npm",
  "status": "skipped_existing",
  "trusted_publishing": {
    "environment": null,
    "message": "configure trusted publishing manually for `tolerant` before the next built-in release publish; open https://www.npmjs.com/package/tolerant/access and finish the GitHub context setup first: config error: trusted publishing could not determine the GitHub repository; set `publish.trusted_publishing.repository`. No supported CI provider identity was detected for npm trusted publishing; supported providers: GitHub Actions, GitLab CI/CD.",
    "repository": null,
    "setup_url": "https://www.npmjs.com/package/tolerant/access",
    "status": "manual_action_required",
    "workflow": null
  },
  "version": "1.0.0"
}
